Frontend con React
Se adapta todo el frontend  del proyecto a React. Aún quedan cosas por hacer, pero lo más importante como el login y recibir mensajes está listo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-node_modules
+# Node modules
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# Logs
+*.log
+
+# Sistema
+.DS_Store
+Thumbs.db
+
+# React build
+frontend/build/
