--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "mysql2": "^3.14.5"
+    "mysql2": "^3.14.5",
+    "pg": "^8.16.3"
   }
 }
