--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.1",
     "d3": "^7.9.0",
+    "dagre": "^0.8.5",
     "dompurify": "^3.2.6",
     "lucide-react": "^0.544.0",
     "marked": "^16.2.1",
@@ -21,6 +22,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
